<resources>
    <string name="app_name">Crypto Exchange</string>
    <string name="coinbase_pro">Coinbase Pro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="channel_name">notification-channel</string>
    <string name="channel_description">CryptoX price alerts</string>
    <string name="popup_ok_btn">OK</string>
    <string name="too_much_data">CryptoX is using lots of data.</string>
    <string name="menu_home">Home</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Log In</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_verify">Verify</string>
    <string name="menu_balances">Balances</string>
    <string name="login_fragment_title">Login with your\nCoinbase Pro Api Key</string>
    <string name="login_api_key_label">Api Key</string>
    <string name="login_api_secret_label">Api Secret</string>
    <string name="login_passphrase_label">Passphrase</string>
    <string name="login_save_info_label">Save API key and secret</string>
    <string name="login_save_passphrase_label">Also save passphrase</string>
    <string name="login_skip_btn">Skip login</string>
    <string name="login_help_btn">Help</string>
    <string name="login_login_btn">Log in</string>
    <string name="login_stars">*****</string>
    <string name="login_disclaimer">CryptoX does not save any of your data. Your Coinbase Pro Api Key, Api Secret, and Passphrase are only stored locally on your device.</string>
    <string name="login_error_missing_api_key">Missing Api Key</string>
    <string name="login_error_missing_api_secret">Missing Api Secret</string>
    <string name="login_error_missing_passphrase">Missing Passphrase</string>
    <string name="login_help_finish_btn">Done</string>
    <string name="login_help_cbpro_link">https://www.pro.coinbase.com/settings/api</string>
    <string name="login_help_skip_btn">Skip</string>
    <string name="login_help_new_account">New Coinbase Pro account</string>
    <string name="login_forbidden_error">Error: Forbidden\nMake sure your API Key has all required permissions</string>
    <string name="login_secret_error">Error: Invalid API Secret</string>
    <string name="currency_USD">USD</string>
    <string name="currency_EUR">EUR</string>
    <string name="currency_BTC">BTC</string>
    <string name="currency_ETH">ETH</string>
    <string name="currency_BCH">BCH</string>
    <string name="currency_LTC">LTC</string>
    <string name="currency_ETC">ETC</string>
    <string name="error_message">Error</string>
    <string name="error_generic_message">Error: %s</string>
    <string name="error_400">400 Error: Missing something from the request</string>
    <string name="error_401">401 Error: You don\'t have permission to do that</string>
    <string name="error_403">403 Error: You don\'t have permission to do that</string>
    <string name="error_404">404 Error: Content not found</string>
    <string name="error_too_many">Error: Too many requests in a row</string>
    <string name="error_server">Error: Coinbase Pro Servers are encountering problems right now</string>
    <string name="onboard_skip">Skip</string>
    <string name="onboard_continue">Continue</string>
    <string-array name="onboarding_titles">
        <item>Welcome to CryptoX!</item>
        <item>Track Prices</item>
        <item>Your account</item>
        <item>Notifications</item>
        <item>Trade Cryptocurrency</item>
    </string-array>
    <string name="toast_please_login_message">Please log in</string>
    <string name="toast_please_verify_message">Please verify your account in Settings</string>
    <string name="toast_missing_permissions_message">Please use an API Key with all required permissions.</string>
    <string name="toast_success">Success</string>
    <string name="toast_coinbase_site_error">Cannot access Coinbase</string>
    <string name="toast_coinbase_pro_site_error">Cannot access Coinbase Pro</string>
    <string name="balances_title">All Accounts</string>
    <string name="balances_logged_out_message">Sign in to view account info</string>
    <string name="balances_percent_change_text">%s\n(%s%s)</string>
    <string name="balances_balance_text">%s %s</string>
    <string name="alerts_title">Alerts</string>
    <string name="alerts_new_alert_label">New alert at: </string>
    <string name="alerts_new_alert_button">Set</string>
    <string name="alerts_current_price_label">Last %s trade price: </string>
    <string name="alert_above">above</string>
    <string name="alert_below">below</string>
    <string name="alert_rapid_movement">Alert when the price of %s spikes or drops</string>
    <string name="chart_timespan_1h">1H</string>
    <string name="chart_timespan_1d">1D</string>
    <string name="chart_timespan_1w">1W</string>
    <string name="chart_timespan_1m">1M</string>
    <string name="chart_timespan_1y">1Y</string>
    <string name="chart_timespan_3y">3Y</string>
    <string name="chart_timespan_24h">24h</string>
    <string name="chart_timespan_all">All</string>
    <string name="chart_trade_btn">Trade</string>
    <string name="chart_buy_btn">Buy</string>
    <string name="chart_sel_btn">Sell</string>
    <string name="chart_default_account">Account</string>
    <string name="chart_default_balance">0.0</string>
    <string name="chart_low_label">low:</string>
    <string name="chart_high_label">high:</string>
    <string name="chart_volume_label">volume:</string>
    <string name="chart_close_label">close:</string>
    <string name="chart_open_label">open:</string>
    <string name="chart_update_error">Error updating chart</string>
    <string name="chart_order_cancel_button">Cancel</string>
    <string name="chart_order_cancelled">Order cancelled</string>
    <string name="chart_cancel_order">Cancel Order</string>
    <string name="chart_orders_label">Orders</string>
    <string name="chart_fills_label">Fills</string>
    <string name="chart_history_order">Order</string>
    <string name="chart_history_fill">Fill</string>
    <string name="chart_history_side_label">Side:  </string>
    <string name="chart_history_size_label">Size:  </string>
    <string name="chart_history_filled_size_label">Filled Size:  </string>
    <string name="chart_history_price_label">Price:  </string>
    <string name="chart_history_status_label">Status:  </string>
    <string name="chart_history_filled_fees_label">Filled Fees:  </string>
    <string name="chart_history_fee_label">Fee:  </string>
    <string name="chart_history_time_label">Time:  </string>
    <string name="chart_history_no_orders">You have no open orders</string>
    <string name="chart_history_no_fills">You have no filled orders</string>
    <string name="chart_history_cancel_confirm">Are you sure you want to cancel this order?</string>
    <string name="chart_history_order_side_buy">Buy </string>
    <string name="chart_history_order_side_sell">Sell </string>
    <string name="chart_history_fill_side_buy">Bought</string>
    <string name="chart_history_fill_side_sell">Sold</string>
    <string name="order_main_label">%s %s for %s</string>
    <string name="order_price_label">%s at %s per %s</string>
    <string name="order_date_created">Date created: %s</string>
    <string name="order_amount_label">Original Amount: %d, Filled Amount: %d</string>
    <string name="order_summary_market_fixed_base">%s %s at market value</string>
    <string name="order_summary_market_fixed_quote">%s %s worth of %s at market value</string>
    <string name="order_summary_limit_buy">Buy %s for up to %s per %s</string>
    <string name="order_summary_limit_sell">Sell %s for at least %s per %s</string>
    <string name="order_summary_stop_buy">Buy %s when the price rises above %s per %s</string>
    <string name="order_summary_stop_sell">Sell %s when the price falls below %s per %s</string>
    <string name="chart_fill_main_label">%s %s for %s</string>
    <string name="chart_fill_price_label">Price: %s per %s</string>
    <string name="chart_fill_fee_label">Fees paid: %s</string>
    <string name="chart_order_fee_label">Fees paid: %s</string>
    <string name="chart_fill_date_single">Date completed: %s</string>
    <string name="chart_fill_date_multiple">Dates completed: %s</string>
    <string name="chart_history_currency_label"> %s at </string>
    <string name="chart_history_trade_type_label">(%s order)</string>
    <string name="chart_wallet_label">%s wallet</string>
    <string name="chart_balance_text">%s %s</string>
    <string name="chart_style_line">Line</string>
    <string name="chart_style_candle">Candle</string>
    <string name="home_market_tab">Market</string>
    <string name="home_favorites_tab">Favorites</string>
    <string name="home_account_tab">Account</string>
    <string name="home_other_tab">Screen #%d</string>
    <string name="home_sort_alphabetical">Sort Favorites Alphabetically</string>
    <string name="home_sort_balance">Sort Favorites By Account Balance</string>
    <string name="menu_balance_exchanges_show_all">Show All Exchanges</string>
    <string name="menu_balance_exchanges_binance">Binance</string>
    <string name="menu_balance_exchanges_cbpro">Coinbase Pro</string>
    <string name="send_title">Send</string>
    <string name="send_send_btn">Send</string>
    <string name="send_destination_blank_label">Destination</string>
    <string name="send_destination_label">Destination (%s address)</string>
    <string name="send_amount_label">Amount</string>
    <string name="send_camera_btn">Camera Button</string>
    <string name="send_amount_error">Error: Trying to send less than minimum which is %s</string>
    <string name="send_invalid_destination_error">Error: Invalid %s address</string>
    <string name="send_enter_amount_warning">Please enter amount to send</string>
    <string name="send_address_not_found_warning">Address not found</string>
    <string name="send_enter_destination_warning">Please enter destination address</string>
    <string name="send_confirm_message">Send %s %s to %s</string>
    <string name="send_confirm_button">Confirm</string>
    <string name="send_cancel_button">Cancel</string>
    <string name="receive_title">Receive</string>
    <string name="receive_receive_btn">Receive</string>
    <string name="receive_copy_address">Copy</string>
    <string name="receive_address_label">%s Address:</string>
    <string name="receive_address_unavailable">Deposit address not available</string>
    <string name="receive_refresh_label">Swipe down to refresh</string>
    <string name="receive_warning_1">Only send %s (%s) to this address</string>
    <string name="receive_warning_2">Sending any other digital asset will result in permanent loss.</string>
    <string name="settings_log_out_btn">Log Out</string>
    <string name="settings_log_in_btn">Log In</string>
    <string name="settings_title">Settings</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_show_trade_confirm">Show confirm popup before buying or selling assets</string>
    <string name="transfer_title">Transfer</string>
    <string name="transfer_pro_wallet_balance">Coinbase Pro Wallet Balance</string>
    <string name="transfer_cb_wallet_balance">Coinbase Wallet Balance</string>
    <string name="transfer_destination">Destination</string>
    <string name="transfer_source">Source</string>
    <string name="transfer_amount">Amount</string>
    <string name="transfer_max">Max</string>
    <string name="transfer_transfer_btn">Transfer funds</string>
    <string name="transfer_coinbase_info">Coinbase transfers are instant and free.</string>
</resources>