<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_chart_style"
        android:checkableBehavior="single">
        <item
            android:id="@+id/chart_style_line"
            android:title="@string/chart_style_line" />
        <item
            android:id="@+id/chart_style_candle"
            android:title="@string/chart_style_candle" />
    </group>

    <group android:id="@+id/group_home_sort"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home_sort_alphabetical"
            android:title="@string/home_sort_alphabetical" />
        <item
            android:id="@+id/home_sort_balance"
            android:title="@string/home_sort_balance" />
    </group>

    <group android:id="@+id/group_balances"
        android:checkableBehavior="single">
        <item
            android:id="@+id/balances_show_all"
            android:title="@string/menu_balance_exchanges_show_all" />
        <item
            android:id="@+id/balances_filter_binance"
            android:title="@string/menu_balance_exchanges_binance" />
        <item
            android:id="@+id/balances_filter_cbpro"
            android:title="@string/menu_balance_exchanges_cbpro" />
    </group>

</menu>
