<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/icon_home"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_alerts"
                android:icon="@drawable/icon_alert"
                android:title="@string/menu_alerts" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
