<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_transfer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:text="@string/transfer_title"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="16dp" />


        <LinearLayout
            android:id="@+id/layout_transfer_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:id="@+id/layout_transfer_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_transfer_account_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_source" />

                <Spinner
                    android:id="@+id/spinner_transfer_accounts"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="-10dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_transfer_account_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/transfer_cb_wallet_balance"
                    android:textSize="17sp"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_transfer_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/txt_transfer_destination_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_destination" />

                <Spinner
                    android:id="@+id/spinner_transfer_destination_accounts"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="-10dp"
                    android:layout_marginBottom="2dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_transfer_destination_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/transfer_pro_wallet_balance"
                    android:textSize="17sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_transfer_interactive_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_transfer_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfer_amount" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etxt_transfer_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/txt_transfer_amount_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/currency_BTC" />

                    <Button
                        android:id="@+id/btn_transfer_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0"
                        android:text="@string/transfer_max" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_transfer_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:text="@string/transfer_coinbase_info"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_transfer_submit_transfer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/transfer_transfer_btn" />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>